[package]
name = "learnrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "11.0"
tokio = { version = "1.33.0", features = [ "rt-multi-thread"]}
polars = "0.26.1"
bitpacking = "0.8.4"
arrow = { version = "37.0.0", features = ["prettyprint"] }
rand = "0.8.5"
tantivy = "0.20.0"
tempfile = "3.6.0"
futures = "0.3.28"
redis-module = "2.0.5"
serde_json = "1.0"
ijson="0.1.3"
vart="0.1.0"
threadpool = "1.8.1"

[[example]]
name = "hello"
crate-type = ["cdylib"]
